--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,39 +37,38 @@
               {
                 "sourceTag": "type:feature",
                 "onlyDependOnLibsWithTags": [
-                  "type:ui", "type:domain-logic", "type:util", "type:api"
+                  "type:ui",
+                  "type:domain-logic",
+                  "type:util",
+                  "type:api"
                 ]
               },
               {
                 "sourceTag": "type:api",
                 "onlyDependOnLibsWithTags": [
-                  "type:ui", "type:domain-logic", "type:util"
-                ]
-              },
-              {
-                "sourceTag": "type:ui",
-                "onlyDependOnLibsWithTags": [
+                  "type:ui",
                   "type:domain-logic",
                   "type:util"
                 ]
               },
               {
-                "sourceTag": "type:domain-logic",
-                "onlyDependOnLibsWithTags": [
-                  "type:util"
-                ]
+                "sourceTag": "type:ui",
+                "onlyDependOnLibsWithTags": ["type:domain-logic", "type:util"]
               },
-
-
+              {
+                "sourceTag": "type:domain-logic",
+                "onlyDependOnLibsWithTags": ["type:util"]
+              },
               {
                 "sourceTag": "domain:shared",
-                "onlyDependOnLibsWithTags": [
-                  "domain:shared"
-                ]
+                "onlyDependOnLibsWithTags": ["domain:shared"]
               },
               {
                 "sourceTag": "domain:flight-app",
-                "onlyDependOnLibsWithTags": ["domain:flight-app", "domain:shared"]
+                "onlyDependOnLibsWithTags": [
+                  "domain:flight-app",
+                  "domain:shared"
+                ]
               }
             ]
           }
