--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "affected:test": "nx affected:test",
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected"
+    "affected": "nx affected",
+    "upgrade-schematics": "yarn upgrade @flight-workspace/schematics"
   },
   "private": true,
   "dependencies": {
@@ -57,7 +58,7 @@
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "14.2.8",
     "@angular/language-service": "14.2.8",
-    "@flight-workspace/schematics": "file:./tools/schematics",
+    "@flight-workspace/schematics": "./tools/schematics",
     "@ngrx/schematics": "14.3.2",
     "@ngrx/store-devtools": "14.3.2",
     "@nrwl/cli": "14.8.6",
