--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@flight-workspace/luggage-util": ["libs/luggage/util/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
