--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
-    "upgrade-schematics": "yarn upgrade @flight-workspace/schematics"
+    "upgrade-schematics": "yarn upgrade @flight-workspace/schematics",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -82,11 +83,13 @@
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^8.0.0",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
     "json-server": "^0.17.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^13.0.3",
     "ng-packagr": "~14.2.0",
     "ngx-build-plus": "^14.0.0",
     "postcss": "^8.4.5",
