chore: improved special domain tag name

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,7 +67,7 @@
                 "sourceTag": "domain:flight-app",
                 "onlyDependOnLibsWithTags": [
                   "domain:flight-app",
-                  "page:flight-home",
+                  "domain:flight-app-entry-page",
                   "domain:shared"
                 ]
               },
