--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@flight-workspace/flight-domain": ["libs/flight/domain/src/index.ts"],
+      "@flight-workspace/flight-features-flight-edit": [
+        "libs/flight/features/flight-edit/src/index.ts"
+      ],
       "@flight-workspace/flight-page-flight-edit": [
         "libs/flight/pages/page-flight-home/page-flight-edit/_index/index.ts"
       ],
