chore: added flight ui and fixed some settings

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
       "@flight-workspace/flight-page-flight-home": [
         "libs/flight/pages/page-flight-home/_index/index.ts"
       ],
+      "@flight-workspace/flight-ui": ["libs/flight/ui/src/index.ts"],
       "@flight-workspace/shared-util": ["libs/shared/util/src/index.ts"]
     }
   },
