chore: fixed prefixes and added build target defaults

--- a/nx.json
+++ b/nx.json
@@ -24,6 +24,11 @@
       }
     }
   },
+  "targetDefaults": {
+    "build": {
+      "dependsOn": ["^build"]
+    }
+  },
   "generators": {
     "@flight-workspace/schematics:application": {
       "style": "css",
