chore: added home page impl for top 5 flights

--- a/libs/home/pages/page-home/_index/project.json
+++ b/libs/home/pages/page-home/_index/project.json
@@ -37,5 +37,5 @@
       }
     }
   },
-  "tags": ["type:page", "domain:home"]
+  "tags": ["type:page", "domain:home", "domain:flight-app-entry-page"]
 }
