chore: added passenger ui

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,6 +39,7 @@
       "@flight-workspace/passenger-domain": [
         "libs/passenger/domain/src/index.ts"
       ],
+      "@flight-workspace/passenger-ui": ["libs/passenger/ui/src/index.ts"],
       "@flight-workspace/shared-ui": ["libs/shared/ui/src/index.ts"],
       "@flight-workspace/shared-util": ["libs/shared/util/src/index.ts"]
     }
