--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,6 +42,9 @@
       "@flight-workspace/passenger-features-passenger-edit": [
         "libs/passenger/features/passenger-edit/src/index.ts"
       ],
+      "@flight-workspace/passenger-features-passenger-search": [
+        "libs/passenger/features/passenger-search/src/index.ts"
+      ],
       "@flight-workspace/passenger-ui": ["libs/passenger/ui/src/index.ts"],
       "@flight-workspace/shared-ui": ["libs/shared/ui/src/index.ts"],
       "@flight-workspace/shared-util": ["libs/shared/util/src/index.ts"]
