--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -45,6 +45,9 @@
       "@flight-workspace/passenger-features-passenger-search": [
         "libs/passenger/features/passenger-search/src/index.ts"
       ],
+      "@flight-workspace/passenger-page-passenger-edit": [
+        "libs/passenger/pages/page-passenger-home/page-passenger-edit/_index/index.ts"
+      ],
       "@flight-workspace/passenger-page-passenger-home": [
         "libs/passenger/pages/page-passenger-home/_index/index.ts"
       ],
