chore: added missing top five passengers feature and fixed type issue with features

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,6 +80,7 @@
                 "onlyDependOnLibsWithTags": [
                   "domain:home",
                   "domain:flight-api",
+                  "domain:passenger-api",
                   "domain:shared"
                 ]
               },
