chore: added remote schematic

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:e2e2": "ts-node ./affected-integration-tests.ts",
+    "affected:e2e": "ts-node ./affected-integration-tests.ts",
     "affected:test": "nx affected:test",
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
