--- a/apps/flight-app/project.json
+++ b/apps/flight-app/project.json
@@ -6,7 +6,7 @@
   "prefix": "flight-workspace",
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:browser",
+      "executor": "@nrwl/angular:webpack-browser",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/flight-app",
@@ -25,7 +25,10 @@
           "apps/flight-app/src/assets/css/demo.css",
           "apps/flight-app/src/assets/css/themify-icons.css"
         ],
-        "scripts": []
+        "scripts": [],
+        "customWebpackConfig": {
+          "path": "apps/flight-app/webpack.config.js"
+        }
       },
       "configurations": {
         "production": {
@@ -47,7 +50,10 @@
               "with": "apps/flight-app/src/environments/environment.prod.ts"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "customWebpackConfig": {
+            "path": "apps/flight-app/webpack.prod.config.js"
+          }
         },
         "development": {
           "buildOptimizer": false,
@@ -61,7 +67,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@nrwl/angular:module-federation-dev-server",
       "configurations": {
         "production": {
           "browserTarget": "flight-app:build:production"
@@ -71,6 +77,8 @@
         }
       },
       "options": {
+        "port": 4200,
+        "publicHost": "http://localhost:4200",
         "proxyConfig": "proxy.conf.json"
       },
       "defaultConfiguration": "development"
