chore: clean up useless boundary domain rules

--- a/libs/flight/pages/page-flight-home/_index/project.json
+++ b/libs/flight/pages/page-flight-home/_index/project.json
@@ -37,5 +37,5 @@
       }
     }
   },
-  "tags": ["type:page", "domain:flight", "domain:flight-app-entry-page"]
+  "tags": ["type:page", "domain:flight"]
 }
