--- a/libs/passenger/pages/page-passenger-home/_index/project.json
+++ b/libs/passenger/pages/page-passenger-home/_index/project.json
@@ -37,5 +37,5 @@
       }
     }
   },
-  "tags": ["type:page", "domain:passenger", "domain:flight-app-entry-page"]
+  "tags": ["type:page", "domain:passenger"]
 }
