--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     "@nrwl/nx-plugin": "14.8.6",
     "@swc/helpers": "~0.3.3",
     "angular-oauth2-oidc": "^13.0.1",
+    "core-js": "^3.6.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.4.1",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -51,6 +56,7 @@
   "devDependencies": {
     "@angular-architects/ddd": "^3.0.0",
     "@angular-architects/module-federation": "14.3.8",
+    "@angular-architects/module-federation-tools": "14.3.8",
     "@angular-devkit/build-angular": "14.2.7",
     "@angular-eslint/eslint-plugin": "14.0.4",
     "@angular-eslint/eslint-plugin-template": "14.0.4",
@@ -68,20 +74,31 @@
     "@nrwl/jest": "14.8.6",
     "@nrwl/js": "14.8.6",
     "@nrwl/linter": "14.8.6",
+    "@nrwl/react": "14.8.6",
+    "@nrwl/web": "14.8.6",
     "@nrwl/workspace": "14.8.6",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@schematics/angular": "14.2.7",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
+    "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.8",
     "@types/node": "16.11.7",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
+    "babel-jest": "28.1.1",
     "cypress": "^10.11.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^8.0.0",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
@@ -97,6 +114,7 @@
     "postcss-url": "10.1.3",
     "prettier": "2.6.2",
     "progress": "^2.0.3",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslib": "^2.0.0",
