--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,4 @@
 {
-  "*.ts": ["eslint"],
-  "*.html": ["eslint"],
+  "*.{ts,tsx}": ["eslint"],
   "*.{js,jsx,ts,tsx,json,html}": "prettier --write"
 }
