chore: removed html and css husky linting and added tsx and jsx

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,9 +1,4 @@
 {
-  "*.ts": [
-    "eslint"
-  ],
-  "*.html": [
-    "eslint"
-  ],
-  "*.{js,ts,scss,css,json,html}": "prettier --write"
+  "*.{ts,tsx}": ["eslint"],
+  "*.{js,jsx,ts,tsx,json,html}": "prettier --write"
 }
